# GoFreight-Assessment

./: .env.example  .gitignore  README.md  conftest.py  pyproject.toml
docs/: break_it_hardened_results.json  break_it_results.json
eval/: model_runner.py  pipeline.py  scorer.py
eval/results/: run_20260424_163830.json  run_20260424_164827.json  run_20260424_210521.json  run_20260424_221336.json  run_20260424_223115.json
eval/test_cases/: cases.json  holdout.json
prompts/: system_prompt.py
src/: cli.py  shared.py
src/core/: executor.py  formatter.py  sql_generator.py
src/db/: schema.py
src/hardening/: preprocessor.py  retry.py  sql_validator.py
tests/: break_it.py  break_it_hardened.py  test_extract_sql.py  test_integration.py  test_scorer.py  test_validator.py
